--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "puppeteer": "^22.6.0"
   }
